refactoring now everything works properly

--- a/core/src/main/resources/templates/greeting.mustache
+++ b/core/src/main/resources/templates/greeting.mustache
@@ -6,8 +6,13 @@
 </head>
 <body>
 <div>Привет))</div>
-<a href="/main">На главную</a>
-<a href="/login">Логин</a>
-<a href="/registration">Регистрация</a>
+<div>
+    <a href="/main">На главную</a>
+    <a href="/admin">Админ панель</a>
+</div>
+<div>
+    <a href="/registration">Регистрация</a>
+    <a href="/login">Логин</a>
+</div>
 </body>
 </html>
